roles/longhorn/files/network-policy-namespace.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "longhorn-namespace"
  namespace: longhorn-system
spec:
  description: "Longhorn traffic policy"
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        {}
